# ChickenJockey

./: .gitignore  CMakeLists.txt  README.md
src/: blocker.cpp  blocker.h  gui.cpp  gui.h  main.cpp  service.cpp  service.h  watcher.cpp
src/utils/: crypto.cpp  crypto.h  hostswriter.cpp  path.cpp  path.h  watcher.h
